--- a/style.css
+++ b/style.css
@@ -5,18 +5,21 @@
 body{
     /* background-color: rgba(255, 255, 255, 0.888); */
     background-color: #f0f2f5;
-    overflow:visible;
+    overflow:hidden;
 }
-header{
+.head{
     background-color: rgba(71, 143, 215,0.8);
     color: aliceblue;
 }
 h3{
     text-align: center;
-    /* margin: 20px !important; */
+    
+}
+.main{
+    position: relative;
 }
 .container{
-    background-image: linear-gradient(120deg,) ;
+   
     width: 50% !important;
     border:1px solid rgb(214, 210, 210);
     border-radius: 15px !important;
@@ -38,12 +41,11 @@ input:focus {
     justify-content: center;
     align-items: center;
 }
-footer{
+
+.foot{
+    width: 100vw;
     background-color: rgba(71, 143, 215,0.8);
     color: aliceblue;
-}
-.foot{
-    
     display: flex;
     justify-content: center;
     align-content: center;
